--- a/admin_portal/templates/admin_portal/admin_sidebar.html
+++ b/admin_portal/templates/admin_portal/admin_sidebar.html
@@ -26,12 +26,12 @@
           class="nav-link active" 
           id="tab-home" 
           data-bs-toggle="pill" 
-          href="#content-dashboard" 
+          href="#content-admin-dashboard" 
           role="tab" 
           aria-controls="content-home" 
           aria-selected="true"
       >
-          <i class=" bi bi-house-door-fill" style="font-size: 1.2em;"></i>
+          <i class=" bi bi-house-door-fill me-3" style="font-size: 1.2em;"></i>
           Admin Dashboard
       </a>
     </li>
@@ -40,12 +40,12 @@
           class="nav-link" 
           id="tab-investments" 
           data-bs-toggle="pill" 
-          href="#content-investment" 
+          href="#content-admin-investment" 
           role="tab" 
-          aria-controls="content-investments" 
+          aria-controls="content-admin-investments" 
           aria-selected="false"
       >
-          <i class=" bi bi-graph-up-arrow"></i>
+          <i class=" bi bi-graph-up-arrow me-3"></i>
           All Investments
       </a>
     </li>
@@ -59,7 +59,7 @@
           aria-controls="content-withdrawals" 
           aria-selected="false"
       >
-          <i class=" bi bi-briefcase-fill" style="font-size: 1.2em;"></i>
+          <i class=" bi bi-briefcase-fill me-3" style="font-size: 1.2em;"></i>
             Investment Plans
       </a>
     </li>
@@ -73,7 +73,7 @@
           aria-controls="content-referrals" 
           aria-selected="false"
       >
-          <i class="bi bi-people-fill"></i>
+          <i class="bi bi-people-fill me-3"></i>
           Withdrawals Request
       </a>
     </li>
@@ -87,7 +87,7 @@
           aria-controls="content-profile" 
           aria-selected="false"
       >
-          <i class="bi bi-person-circle"></i>
+          <i class="bi bi-person-circle me-3"></i>
           Referrals
       </a>
     </li>
@@ -101,7 +101,7 @@
           aria-controls="content-faq" 
           aria-selected="false"
       >
-          <i class="bi bi-question-circle-fill"></i>
+          <i class="bi bi-question-circle-fill me-3"></i>
           Reports
       </a>
     </li>
@@ -115,7 +115,7 @@
             aria-controls="content-faq" 
             aria-selected="false"
         >
-            <i class="bi bi-question-circle-fill"></i>
+            <i class="bi bi-question-circle-fill me-3"></i>
             Notifications
         </a>
       </li>
