--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -46,11 +46,11 @@
     
     <div>
       <!--- ==== sidebar logic ===-->
-    {% if request.user.is_staff %}
+    {% if request.user.is_authenticated and request.user.is_staff %}
         <!-- Include staff sidebar -->
         {% include "admin_portal/admin_sidebar.html" %}
     {% else %}
-        <!-- Include staff sidebar -->
+        <!-- Include client sidebar -->
         {% include "users/client_sidebar.html" %}
     {% endif %}
     
@@ -83,7 +83,6 @@
                         Welcome, {{user.username }}
                       </a>
                       {% endif %}
-                    
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                         <li>
