Set the url to the sidebar

--- a/admin_portal/templates/admin_portal/admin_sidebar.html
+++ b/admin_portal/templates/admin_portal/admin_sidebar.html
@@ -54,7 +54,7 @@
           class="nav-link" 
           id="tab-withdrawals" 
           data-bs-toggle="pill" 
-          href="#content-withdrawals" 
+          href="#content-admin-plans" 
           role="tab" 
           aria-controls="content-withdrawals" 
           aria-selected="false"
