withdrwals tab link

--- a/admin_portal/templates/admin_portal/admin_sidebar.html
+++ b/admin_portal/templates/admin_portal/admin_sidebar.html
@@ -68,9 +68,9 @@
           class="nav-link" 
           id="tab-referrals" 
           data-bs-toggle="pill" 
-          href="#content-referrals" 
+          href="#content-admin-withdrawals" 
           role="tab" 
-          aria-controls="content-referrals" 
+          aria-controls="content-admin-referrals" 
           aria-selected="false"
       >
           <i class="bi bi-people-fill me-3"></i>
