Update on the dashboard space added

--- a/admin_portal/templates/admin_portal/admin_dashboard.html
+++ b/admin_portal/templates/admin_portal/admin_dashboard.html
@@ -20,7 +20,15 @@
     {% include 'admin_portal/referrals_admin_tab.html' %}
 </div>
 
-<div class="tab-pane fade" id="content-admin-plan" role="tabpanel" aria-labelledby="tab-profile">
-    {% include 'admin_portal/plans_admin_tab.html' %}
+<div class="tab-pane fade" id="content-admin-reports" role="tabpanel" aria-labelledby="tab-profile">
+    {% include 'admin_portal/reports_admin_tab.html' %}
+</div>
+
+<div class="tab-pane fade" id="content-admin-reports" role="tabpanel" aria-labelledby="tab-profile">
+    {% include 'admin_portal/reports_admin_tab.html' %}
+</div>
+
+<div class="tab-pane fade" id="content-admin-notifications" role="tabpanel" aria-labelledby="tab-profile">
+    {% include 'admin_portal/notifications_admin_tab.html' %}
 </div>
 {% endblock content %}
