links to tabs set on the sidebars

--- a/admin_portal/templates/admin_portal/admin_sidebar.html
+++ b/admin_portal/templates/admin_portal/admin_sidebar.html
@@ -82,9 +82,9 @@
           class="nav-link" 
           id="tab-profile" 
           data-bs-toggle="pill" 
-          href="#content-profile" 
+          href="#content-admin-referrals" 
           role="tab" 
-          aria-controls="content-profile" 
+          aria-controls="content-admin-referrals" 
           aria-selected="false"
       >
           <i class="bi bi-person-circle me-3"></i>
@@ -96,9 +96,9 @@
           class="nav-link" 
           id="tab-faq" 
           data-bs-toggle="pill" 
-          href="#content-faq" 
+          href="#content-admin-reports" 
           role="tab" 
-          aria-controls="content-faq" 
+          aria-controls="content-admin-reports" 
           aria-selected="false"
       >
           <i class="bi bi-question-circle-fill me-3"></i>
@@ -110,9 +110,9 @@
             class="nav-link" 
             id="tab-faq" 
             data-bs-toggle="pill" 
-            href="#content-faq" 
+            href="#content-admin-notifications" 
             role="tab" 
-            aria-controls="content-faq" 
+            aria-controls="content-admin-notifications" 
             aria-selected="false"
         >
             <i class="bi bi-question-circle-fill me-3"></i>
