Withdrawals tab updated

--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -9,7 +9,7 @@
 
         <section class="row gy-5">
             <div class="col-6 col-md-3">
-                <div class="shadow-sm summary p-4 text-center">
+                <div class="shadow-sm summary rounded-3 p-4 text-center">
                     <i class="bi bi-briefcase-fill me-2"></i>
                     
                     <div class="pt-3"> 
