changed button in the plans

--- a/admin_portal/templates/admin_portal/plans_admin_tab.html
+++ b/admin_portal/templates/admin_portal/plans_admin_tab.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %} 
 <section class="plan pt-2">
     <div class="container">
         <section class="row">
