styling the dropdown options

--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -121,13 +121,23 @@
                                         <i class="bi bi-three-dots"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                      <a class="dropdown-item py-3" href="#">
-                                        ACTIVATE INVESTMENT
-                                        <i class="bi bi-check-all text-success"></i>
+                                      <a class="dropdown-item py-2" href="#">
+                                        <b>
+                                            <i class="bi bi-check-all text-success"></i>
+                                            Activate Investment
+                                        </b>
                                     </a>
-                                      <a class="dropdown-item py-3" href="#">
-                                        MORE DETAILS 
-                                        <i class="bi bi-chevron-double-right text-primary"></i>
+                                    <a class="dropdown-item py-2" href="#">
+                                        <b>
+                                            <i class="bi bi-chevron-double-right text-primary"></i>
+                                            More Details 
+                                        </b>
+                                    </a>
+                                    <a class="dropdown-item py-2" href="#">
+                                        <b>
+                                            <i class="bi bi-coin text-primary"></i>
+                                            Set Profit
+                                        </b>
                                     </a>
                                     </div>
                                   </div>
