--- a/admin_portal/templates/admin_portal/investments_admin_tab.html
+++ b/admin_portal/templates/admin_portal/investments_admin_tab.html
@@ -79,6 +79,40 @@
                     <tbody>
                         {% for investment in investments %}
 
+                        <!-- Modal For Activate Investment -->
+                        
+                        <div class="modal fade" id="investmentStatusModal{{investment.id}}" tabindex="-1" aria-labelledby="investmentStatusLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <form action="" method="POST">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">
+                                                Activate / Deactivate Investment.
+                                            </h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div>
+                                                {% if not investment.status %}
+                                                <p class="alert alert-success fw-bolder">Do you want to activate investment - {{investment.investment_plan.name}}?</p>
+                                                {% else %}
+                                                <p class="alert alert-danger fw-bolder">Do you want to deactivate student - {{student.user.username}}</p>
+                                                {% endif %}
+                                                {% csrf_token %}
+                                                <input type="hidden" value="{{student.user.username}}" name="username">
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" class="btn btn-outline-success">
+                                                Confirm
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
                         <tr>
                             <!-- <td>   
                                 {{forloop.counter}}
@@ -121,7 +155,12 @@
                                         <i class="bi bi-three-dots"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                      <a class="dropdown-item py-2" href="#">
+                                      <a 
+                                        class="dropdown-item py-2" 
+                                        href="#"
+                                        data-bs-toggle="modal" 
+                                        data-bs-target="#investmentStatusModal{{investment.id}}" 
+                                    >
                                         <b>
                                             <i class="bi bi-check-all text-success"></i>
                                             Activate Investment
